[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Weapons/Bullet_logic.gd" type="Script" id=1]
[ext_resource path="res://Sprites/FX/Chunky_bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[node name="Bullet" type="Area2D"]
z_index = -1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Life_time" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Life_time" to="." method="_on_Life_time_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
